examples/errors/runtime_division_zero.jc
// ================================================
// ERROR: Division by Zero
// Expected: Runtime Error: Division by zero
// ================================================

keep x = 10;
keep y = 0;

// This will cause a division by zero error
x = x / y;
say(x);
